--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,33 @@
-click==8.0.1
-cycler==0.10.0
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==0.15.1
-greenlet==1.1.0
-itsdangerous==2.0.1
-Jinja2==3.0.1
-kiwisolver==1.3.1
-MarkupSafe==2.0.1
-matplotlib==3.4.2
-mysql-client==0.0.1
-mysqlclient==2.0.3
-numpy==1.21.1
-Pillow==8.3.1
-PyMySQL==1.0.2
-pyparsing==2.4.7
-python-dateutil==2.8.2
-six==1.16.0
-SQLAlchemy==1.4.20
-Werkzeug==2.0.1
-WTForms==2.3.3
+aiohttp==3.7.3
+black==20.8b1
+bleach==3.3.0
+blinker==1.4
+coverage==5.5
+Cython==0.29.22
+environ-config==20.1.0
+Faker==6.5.0
+falcon==2.0.0
+Flask==1.1.2
+Flask-Injector==0.12.3
+Flask-OpenTracing==1.1.0
+freezegun==1.1.0
+gunicorn==20.1.0
+inflection==0.5.1
+hy==0.20.0
+injector==0.18.4
+ipdb==0.13.4
+ipython==7.19.0
+jaeger-client==4.4.0
+mutmut==2.1.0
+mypy==0.790
+objgraph==3.5.0
+opentracing
+prometheus-client==0.10.1
+pytest==6.2.2
+redis==3.5.3
+redis-opentracing
+requests==2.25.1
+sentry-sdk==1.0.0
+watchdog==0.10.3
+Werkzeug<2.0.0
+zope.interface==5.2.0
